# lecture-pilot

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  design-qa.md  eslint.config.mjs  knip.json  package-lock.json  package.json  security_best_practices_report.md
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260710_0001_identity_and_courses.py  20260710_0002_usage_quotas.py  20260710_0003_local_professor_credentials.py  20260711_0004_identity_provider_claims.py  20260713_0005_remove_professor_approval.py  20260713_0006_course_sync_status.py  20260713_0007_model_usage_events.py  20260715_0008_query_statistics.py  20260715_0009_model_request_attempts.py  20260723_0010_remove_course_archives.py
apps/api/src/lecturepilot/: __init__.py  account_admin_repository.py  account_admin_routes.py  account_models.py  account_responses.py  admin_media_routes.py  agent_authorization.py  agent_canvas_write.py  agent_command_utils.py  agent_highlight.py  agent_image_placement.py  agent_image_targets.py  agent_image_tool.py  agent_response_schema.py  agent_routes.py  agent_side_effect_tools.py  agent_state_access.py  agent_tool_executor.py  agent_tool_loop.py  agent_tool_schemas.py  agent_tool_utils.py  agent_tool_workspace.py  agent_turn_orchestration.py  analytics.py  analytics_routes.py  api_auth.py  app.py  approval_repository.py  approval_routes.py  asset_routes.py  audit.py  auth_diagnostics.py  auth_html_capture.py  auth_routes.py  body_limits.py  (+182 more)
apps/api/tests/: agent_test_helpers.py  auth_helpers.py  canvas_workspace_fixtures.py  conftest.py  security_db_helpers.py  test_admin_media_routes.py  test_agent_auth.py  test_agent_canvas_write.py  test_agent_image_placement_loop.py  test_agent_image_targets.py  test_agent_image_tool.py  test_agent_stream.py  test_agent_tool_e2e.py  test_agent_tool_loop.py  test_agent_tool_profiles.py  test_agent_tool_roots_security.py  test_agent_tools.py  test_alma_professor_auth.py  test_analytics_routes.py  test_api.py  test_asset_auth.py  test_asset_preview.py  test_auth_diagnostics.py  test_auth_html_capture.py  test_canvas_api.py  test_canvas_learning_support.py  test_canvas_markdown_rich.py  test_canvas_snapshot.py  test_canvas_workspace.py  test_coaching_progress.py  test_course_access_policy.py  test_course_canvas_draft_integrity.py  test_course_canvas_enrichment.py  test_course_canvas_evidence_budget.py  test_course_canvas_generation_http.py  test_course_canvas_generation_jobs.py  test_course_canvas_generation_service.py  test_course_canvas_ids.py  test_course_canvas_json.py  test_course_canvas_language.py  (+82 more)
apps/latex-compiler/: Dockerfile  bundle-seed.tex  pyproject.toml
apps/latex-compiler/bundle-seeds/: article.tex  beamer-12pt.tex  beamer-default.tex  bibliography.tex  book.tex  report.tex
apps/latex-compiler/tests/: test_archive.py  test_compiler.py  test_image_contract.py  test_server.py  test_source_compatibility.py  test_tectonic_compiler.py
docs/: README.md  (+13 more)
(+325 files in other folders)
