[project]
name = "lecturepilot-api"
version = "0.1.0"
description = "Lightweight backend and agent harness for LecturePilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyMuPDF>=1.24.0",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
agent = [
  "litellm>=1.72.0",
]
tuebingen = [
  "tue-api-wrapper>=0.1.0",
]
test = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
