[project]
name = "lecturepilot-api"
version = "0.1.0"
description = "Lightweight backend and agent harness for LecturePilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.10.1",
  "PyMuPDF==1.27.1",
  "PyYAML==6.0.2",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
agent = [
  "litellm==1.82.0",
]
observability = [
  "mlflow>=3.0.0",
]
tuebingen = [
  "tue-api-wrapper>=0.1.0",
]
test = [
  "httpx==0.28.1",
  "pytest==8.4.2",
  "pytest-asyncio==0.26.0",
  "ruff==0.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F"]
