[project]
name = "lecturepilot-api"
version = "0.2.1"
description = "Lightweight backend and agent harness for LecturePilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.135.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.10.1",
  "psycopg[binary]==3.3.4",
  "PyMuPDF==1.27.1",
  "PyYAML==6.0.2",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.32",
  "SQLAlchemy==2.0.51",
  "uvicorn[standard]==0.38.0",
]

[project.scripts]
lecturepilot-bootstrap-admin = "lecturepilot.bootstrap_admin:main"

[project.optional-dependencies]
agent = [
  "litellm==1.91.1",
]
observability = [
  "mlflow>=3.0.0",
]
tuebingen = [
  "tue-api-wrapper==0.3.0",
]
test = [
  "httpx==0.28.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F"]
