[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lecturepilot-latex-compiler"
version = "0.1.0"
description = "Isolated LaTeX-to-PDF compiler service for LecturePilot."
requires-python = ">=3.11"

[project.scripts]
lecturepilot-latex-compiler = "lecturepilot_latex_compiler.server:main"

[tool.setuptools.packages.find]
where = ["src"]
